--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Martian</title>
+    <title>Hidden Figures</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.css">
@@ -39,13 +39,13 @@
     </nav>
     <div class="main-display">
         <img id="firstpf" src="https://s3.amazonaws.com/ffe-ugc/intlportal2/dev-temp/en-US/__59dd139766efd.jpg"/>
-        <h1 id="home-title">The Martian</h1>
+        <h1 id="home-title">Hidden Figures</h1>
     </div>
 </section>
 
 
 <section id="footer">
-  <div id="pfooter">~ This is a C ~</div>
+  <div id="pfooter"></div>
 </section>
 
 <script>
