--- a/hidden-figures/index.html
+++ b/hidden-figures/index.html
@@ -28,7 +28,8 @@
             <div class="collapse navbar-collapse" id="wydNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="word"><a href="#home">Home</a></li>
-                    <li class="word"><a href="#tech">Technologies</a></li>
+                    <li class="word"><a href="#Synopsis">Synopsis</a></li>
+                    <li class="word"><a href="#tech">Technology</a></li>
                     <li class="word"><a href="#topic">Topics</a></li>
                     <li class="word"><a href="#plotline">Timeline</a></li>
                     <li class="word"><a href="#others">Others</a></li>
@@ -40,6 +41,15 @@
     <div class="main-display">
         <img id="firstpf" src="https://s3.amazonaws.com/ffe-ugc/intlportal2/dev-temp/en-US/__59dd139766efd.jpg"/>
         <h1 id="home-title">Hidden Figures</h1>
+        <div class = "text-center" id="Synopsis">Summary</div><p>
+            <div>Hidden Figures is an American biographical drama film, which is based on the events from a non-fiction book by Margot Lee Shetterly. The film follows the progression of three black female's, career paths in NASA. The main character, Katherine Johnson, is a mathematicians who worked on analytic algebra for NASA, during the American and Soviet Space Race. The film also features Dorothy Vaughan, an aspiring supervisor, and Mary Jackson, the first african american fenmale engineer at NASA.</div>
+</p>
+
+         <div class = "text-center" id="topic">Topics</div><p>The Topics that are coveres in the movie that we have discussed in class are the topics on intellectual property, government and privacy. Intellectual Property is brought up when Katherine tries to put her name on the calculations she's made, but her supervisor makes her take it off. As for privacy and Government, at first Katherine isn't able to see all of the information on the calculations, because some of the equations require security clearance </p>
+
+
+
+        
     </div>
 </section>
 
